my-configmap-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-config-map-pod
  namespace: my-ns
  labels:
    app: myapp
spec:
  containers:
  - name: myapp-container
    image: busybox
    command: ['sh', '-c', "echo $(MY_VAR) && sleep 3600"]
