my-secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-secret-pod
  namespace: my-ns
  labels:
    app: myapp
spec:
  containers:
  - name: myapp-container
    image: busybox
    command: ['sh', '-c', "echo Hello, Kubernetes! && sleep 3600"]
