my-serviceaccount-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-serviceaccount-pod
  namespace: my-ns
  labels:
    app: myapp
spec:
  serviceAccountName: my-serviceaccount
  containers:
  - name: myapp-container
    image: busybox
    command: ['sh', '-c', "echo Hello, Kubernetes! && sleep 3600"]
