network-policy-client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: network-policy-client-pod
  namespace: my-ns
  labels:
    app: myapp
spec:
  containers:
  - name: busybox
    image: radial/busyboxplus:curl
    command: ["/bin/sh", "-c", "while true; do sleep 3600; done"]
