network-policy-secure-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: network-policy-secure-pod
  namespace: my-ns
  labels:
    app: secure-app
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
