rolling-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rolling-deployment
  namespace: my-ns
  labels:
    app: myapp
spec:
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 2
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.1
        ports:
        - containerPort: 80
