my-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: my-ns
  labels:
    app: myapp
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
